<resources>
    <string name="app_name">g-optics</string>

    <string name="welcome_message">Bienvenido a G-Optics</string>

<!--    Registrar Agencia-->
    <string name="register_tittle">REGISTRA ESTA TABLET EN TU AGENCIA</string>
    <string name="register_select">SELECCIONA LA AGENCIA EN LA QUE TE ENCUENTRAS</string>
    <string name="button_register">REGISTRAR</string>
    <string name="text_registeradv">ESTE PROCESO SE REALIZA SOLO LA PRIMERA VEZ</string>
<!--    -->

<!--Login-->
    <string name="login_text">ACCEDER</string>
    <string name="username_hint">USUARIO</string>
    <string name="password_hint">CONTRASEÑA</string>
    <string name="login_button_text">INICIAR</string>
    <string name="wifi_disconnection_warning">DEBES ESTAR CONECTADO A UNA RED WIFI  -  SOPORTE 59463737</string>
    <string name="campos_obli">CAMPOS CON * OBLIGATORIOS</string>
    <string name="pie_pag"> WWW.G-OPTICS.COM.GT - VERSION 1.1</string>
    <string name="disconnected">VERIFICA TU CONEXION A INTERNET</string>
    <string name="datos_incorrectos">TUS DATOS SON INCORRECTOS</string>
    <string name="bienvenido">BIENVENID@</string>
<!---->



<!--    Formulario de Historia clinica-->
    <string-array name="ultima_visita">
        <item>1 MES</item>
        <item>2 MESES</item>
        <item>3 MESES</item>
        <item>6 MESES</item>
        <item>9 MESES</item>
        <item>1 AÑO</item>
        <item>MAS DE 1 AÑO</item>
    </string-array>
    <string-array name="arraymedio">
        <item>REDES</item>
        <item>CENTRO COMERCIAL</item>
        <item>REFERIDO</item>
        <item>VOLANTEO</item>
        <item>CLINICA</item>
    </string-array>
    <string name="regresar">REGRESAR</string>
    <string name="labelmedios">MEDIO: </string>
    <string name="logout_button">Salir</string>
    <string name="history_text">HISTORIA CLINICA</string>
    <string name="trabajador_text">TRABAJADOR: %s</string>
    <string name="agencia_text">AGENCIA: PACIFIC PINULA</string>
    <string name="datos_personales">DATOS PERSONALES: </string>
    <string name="nombre_completo">NOMBRE COMPLETO: *</string>
    <string name="edad">EDAD: *</string>
    <string name="email">EMAIL: *</string>
    <string name="nit_dpi">NIT - DPI: </string>
    <string name="ocupacion">OCUPACION: </string>
    <string name="telefono">TELEFONO: *</string>
    <string name="direccion">DIRECCION: </string>
    <string name="antecedentes_medicos">ANTECEDENTES MEDICOS: </string>
    <string name="cirugia_tratamiento_ocular">CIRUGIA O TRATAMIENTO OCULAR: </string>
    <string name="usa_lentes">USA LENTES: </string>
    <string name="si">SI </string>
    <string name="no">NO </string>
    <string name="ultima_evaluacion">ULTIMA EVALUACION: </string>
    <string name="motivo_consulta">MOTIVO DE CONSULTA: </string>

    <string name="rx_uso">RX USO</string>
    <string name="retinoscopia">RETINOSCOPIA</string>
    <string name="autorefactometro">AUTOREFACTOMETRO</string>
    <string name="lente_contacto">LENTE DE CONTACTO</string>
    <string name="rx_final">RX FINAL</string>


    <string name="ojo">OJO</string>
    <string name="esf">ESF.</string>
    <string name="cil">CIL.</string>
    <string name="eje">EJE</string>
    <string name="adv">A/V</string>
    <string name="add_">ADD.</string>
    <string name="a_v">A.V</string>
    <string name="od">OD</string>
    <string name="oi">OI</string>
    <string name="add">ADD</string>


    <string name="ojo6">OJO *</string>
    <string name="esf6">ESF. *</string>
    <string name="cil6">CIL. *</string>
    <string name="eje6">EJE *</string>
    <string name="adv6">A/V *</string>
    <string name="add_6">ADD. *</string>
    <string name="a_v6">A.V *</string>
    <string name="od6">OD *</string>
    <string name="oi6">OI *</string>
    <string name="add6">ADD *</string>
    <string name="altura6">ALTURA *</string>
    <string name="observaciones6">OBSERVACIONES *</string>


    <string name="avsc">A.V.S.C</string>
    <string name="ao">AO</string>


    <string name="dnp">DNP</string>
    <string name="observaciones">OBSERVACIONES</string>
    <string name="altura">ALTURA</string>
    <string name="olvidarcampos">NO OLVIDES LLENAR TODOS LOS CAMPOS</string>
    <string name="btnguardar">GUARDAR</string>
    <string name="dialogsave">DATOS GUARDADOS CORRECTAMENTE</string>
    <string name="datos_vacios">LLENA LOS CAMPOS OBLIGATORIOS PARA GUARDAR</string>
<!--    -->
</resources>