<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="500dp"
        android:layout_height="400dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/register_tittle"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:text="@string/register_select"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spmedios"
                    android:layout_width="195dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_edittext"
                    android:textColor="@color/label" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:orientation="vertical">
                <Button
                    android:id="@+id/saveagencia"
                    android:layout_width="200dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/button_register"
                    android:textSize="18sp"
                    app:cornerRadius="20dp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/text_registeradv"
                    android:textSize="12sp" />
            </LinearLayout>





        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>