<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



            <LinearLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="15dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="344dp"
                tools:layout_editor_absoluteY="68dp">

                <LinearLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewIcon"
                        android:layout_width="match_parent"
                        android:layout_height="218dp"
                        android:layout_gravity="center"

                        android:src="@drawable/goptics" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="600dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:text="@string/login_text"
                        android:textAlignment="center"
                        android:textColor="#2D358B"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/constraintLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="344dp"
                        tools:layout_editor_absoluteY="68dp">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableLeft="@drawable/baseline_person_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/username_hint"
                            android:padding="8dp"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="51dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableLeft="@drawable/baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="148dp"
                        android:layout_height="58dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="6dp"
                        android:backgroundTint="@color/blue"
                        android:text="@string/login_button_text"
                        android:textSize="18sp"
                        app:cornerRadius="20dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:textColor="@android:color/holo_red_dark" />

                </LinearLayout>
            </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/wifi_disconnection_warning"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="570dp"
            tools:layout_editor_absoluteY="730dp" />
    </LinearLayout>
    </ScrollView>


</LinearLayout>
